unpackaged/main/default/objects/zkfedex__HazMatCommodity__c/zkfedex__HazMatCommodity__c.object-meta.xml
<CustomObject>
    <label>FedEx HazMat Commodity</label>
    <nameField>
        <label>HazMat Commodity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FedEx HazMat Commodities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>