unpackaged/main/default/objects/zkfedex__HazMatCommodity__c/fields/zkfedex__HazardClass__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__HazardClass__c</fullName>
    <label>Hazard Class</label>
    <length>100</length>
    <type>Text</type>
</CustomField>