unpackaged/main/default/objects/zkfedex__HazMatCommodity__c/fields/zkfedex__ProperShippingName__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__ProperShippingName__c</fullName>
    <label>Proper Shipping Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>