unpackaged/main/default/objects/zkfedex__HazMatCommodity__c/fields/zkfedex__RegulatoryId__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__RegulatoryId__c</fullName>
    <description>Regulatory identifier for a commodity (e.g. "UN ID" value)</description>
    <inlineHelpText>Regulatory identifier for a commodity (e.g. "UN ID" value)</inlineHelpText>
    <label>Regulatory ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>